Add rrt_connect algorithm - draft puml class diagram - update ComputePath message (goal shared header + path in feedback) - improve path finding logic & smoothing - add orientation - add check on max tree size

--- a/src/robmob_interfaces/CMakeLists.txt
+++ b/src/robmob_interfaces/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 
@@ -25,7 +26,10 @@ endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/ComputePath.action"
-  DEPENDENCIES geometry_msgs nav_msgs
+  DEPENDENCIES 
+  geometry_msgs
+  nav_msgs
+  std_msgs
 )
 
 ament_package()
