update launch file system

--- a/src/rrt_connect_planner/CMakeLists.txt
+++ b/src/rrt_connect_planner/CMakeLists.txt
@@ -43,7 +43,7 @@ ament_target_dependencies(
 )
 
 install(
-  DIRECTORY include launch rviz
+  DIRECTORY include rviz
   DESTINATION share/${PROJECT_NAME}
 )
 install(
