--- a/src/robmob_cmd_law/CMakeLists.txt
+++ b/src/robmob_cmd_law/CMakeLists.txt
@@ -58,6 +58,11 @@ install(TARGETS
   DESTINATION include
 )
 
+install(
+  DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
