--- a/src/robmob_auto_explo/package.xml
+++ b/src/robmob_auto_explo/package.xml
@@ -15,6 +15,8 @@
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>slam_toolbox</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
