--- a/src/robmob_auto_explo/CMakeLists.txt
+++ b/src/robmob_auto_explo/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(nav_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(slam_toolbox REQUIRED)
+# find_package(slam_toolbox REQUIRED)
 
 # uncomment the following section in order to fill in
 # further dependencies manually.
@@ -43,7 +43,8 @@ ament_target_dependencies(auto_explo_node
   "sensor_msgs"
   "geometry_msgs"
   "std_msgs"
-  "slam_toolbox") 
+  # "slam_toolbox"
+  ) 
 
 ament_target_dependencies(full_turn_node
   "rclcpp"
