--- a/src/robmob_bringup/CMakeLists.txt
+++ b/src/robmob_bringup/CMakeLists.txt
@@ -24,8 +24,17 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY launch config rviz
-  DESTINATION share/${PROJECT_NAME}/
+  DIRECTORY launch/
+  DESTINATION share/${PROJECT_NAME}/launch
+)
+
+install(
+  DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
+install(
+  DIRECTORY rviz/
+  DESTINATION share/${PROJECT_NAME}/rviz
 )
 
 ament_package()
