fichiers de config

--- a/src/rrt_connect_planner/CMakeLists.txt
+++ b/src/rrt_connect_planner/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 
 add_executable(planner_node src/planner_node.cpp src/map_helper.cpp src/rrt_connect.cpp)
-add_executable(mock_robot_node src/mock_robot_node.cpp)
+# add_executable(mock_robot_node src/mock_robot_node.cpp)
 target_include_directories(planner_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
@@ -32,22 +32,26 @@ ament_target_dependencies(
   tf2_geometry_msgs
 )
 
-ament_target_dependencies(
-  mock_robot_node
-  rclcpp
-  rclcpp_action
-  geometry_msgs
-  tf2_ros
-  tf2_geometry_msgs
-  robmob_interfaces
+# ament_target_dependencies(
+#   mock_robot_node
+#   rclcpp
+#   rclcpp_action
+#   geometry_msgs
+#   tf2_ros
+#   tf2_geometry_msgs
+#   robmob_interfaces
+# )
+
+# install(
+#   DIRECTORY include rviz
+#   DESTINATION share/${PROJECT_NAME}
+# )
+install(DIRECTORY rviz config
+  DESTINATION share/${PROJECT_NAME}
 )
 
 install(
-  DIRECTORY include rviz
-  DESTINATION share/${PROJECT_NAME}
-)
-install(
-  TARGETS planner_node mock_robot_node
+  TARGETS planner_node # mock_robot_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
